Some Test command

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-
+<h1>Hello</h1>
 <!--Header Starts-->
 
 	<div class="header">
@@ -52,6 +52,9 @@
 <div class="footer">
 
 <p>&copy; 2014 by XYZ </p>
+
+<p>&copy; 2014 by XYZ </p>
+
 
 <!--==============================Footer Ends==============================-->
 </div>
